# lzmalloc

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.redis  LICENSE  Makefile  README.md  docker-compose.redis.yml  docker-compose.yml  lz_config.h.in
.github/workflows/: ci.yml
benchmarks/: bench_suite.c
include/: chunk.h  common.h  lzmalloc.h  region.h  rtree.h  security.h  sizes.h  slab.h  span.h  telemetry.h  tlh.h  topology.h  vmm.h
src/: lzmalloc.c  region.c  rtree.c  security.c  slab.c  telemetry.c  tlh.c  topology.c  vmm.c
src/api/: api.c  posix.c  routing.h
src/arch/: atomics.h  compiler.h  cpu_rt.c  cpu_rt.h
src/core/: chunk.h  rtree.c  rtree.h  security.c  security.h
src/engines/: core_heap.c  core_heap.h  slab.c  slab.h  span.c  span_bin.c  span_bin.h  vmm.c  vmm.h
src/hooks/: lzmalloc.c  posix_hooks.c
src/internal/: common.h  sizes.h  telemetry.c  telemetry.h  topology.c  topology.h
src/meta/: chunk.h  pagemap.c  pagemap.h
src/os/: memory.c  memory.h  security.c  security.h
src/tlh/: tlh.c  tlh.h
tests/: integration_tests.c  stress_tests.c  unit_tests.c
